--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             line-height: 1.7;
             color: #2d3748;
-            background: linear-gradient(135deg, #667eea 0%, #0d6a8f 50%, #10b6c2 100%);
+            background: linear-gradient(135deg, #023f77 0%, #0d6a8f 50%, #10b6c2 100%);
             min-height: 100vh;
             scroll-behavior: smooth;
         }
@@ -48,12 +48,12 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(90deg, #667eea, #764ba2, #f093fb);
+            background: linear-gradient(90deg, #667eea, #0ea3c9, #00fff2);
         }
 
         .header h1 {
             font-size: 3.5rem;
-            background: linear-gradient(45deg, #667eea, #764ba2);
+            background: linear-gradient(45deg, #0ea3c9, #00fff2);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             margin-bottom: 15px;
@@ -606,7 +606,7 @@
             <h1>🤝 Diversidade e Colaboração: A Força do Coletivo</h1>
             <h2>Estratégias Inovadoras para Transformação Social e Organizacional</h2>
             <p style="font-size: 1.1rem; color: #4a5568; margin-bottom: 20px;">
-                Atividade Prática – SENAI Mecatrônica | Desenvolvendo Competências para o Século XXI
+                Atividade Prática – CFP SENAI Mecatrônica
             </p>
             
             <div class="course-info">
@@ -620,7 +620,11 @@
                 </div>
                 <div class="info-item">
                     <div class="info-label">Estudante</div>
-                    <div>Gustavo Chimello</div>
+                        <div style="display: flex; align-items: center; justify-content: center; gap: 10px;">
+                            <img src="logo.jpeg" alt="logo." 
+                            style="width: 48px; height: 48px; border-radius: 50%; object-fit: cover; border: 2px solid #0777c2; background: #fff;" />
+                            <span>Gustavo Chimello</span>
+                        </div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">Data</div>
