--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(90deg, #667eea, #0ea3c9, #00fff2);
+            background: linear-gradient(90deg, #667eea, #1a8ca8, #00aeff);
         }
 
         .header h1 {
@@ -198,7 +198,7 @@
         }
 
         .challenge-context {
-            background: linear-gradient(135deg, #4834d4 0%, #686de0 100%);
+            background: linear-gradient(135deg, #3451d4 0%, #6898e0 100%);
             color: white;
             padding: 25px;
             border-radius: 15px;
@@ -352,7 +352,7 @@
 
 
         .conclusion {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #3a5bee 0%, #0d1eb6 100%);
             color: white;
             text-align: center;
             padding: 60px 50px;
