--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
             <h1>🤝 Diversidade e Colaboração: A Força do Coletivo</h1>
             <h2>Estratégias Inovadoras para Transformação Social e Organizacional</h2>
             <p style="font-size: 1.1rem; color: #4a5568; margin-bottom: 20px;">
-                Atividade Prática – CFP SENAI Mecatrônica
+                CFP SENAI Mecatrônica
             </p>
             
             <div class="course-info">
